[package]
name = "ianaio-markdown"
version = "0.1.0"
description = "This showcasing the IanaIO Workers"
authors = ["Jaroslaw Cichon <dev.iana.io> IanaIO Rust and WebAssembly Working Group"]
edition = "2021"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/ianaio/ianaio-markdown"
homepage = "https://rustwasm.iana.io/examples/ianaio-markdown"
documentation = "https://docs.rs/ianaio-markdown/latest/ianaio-markdown"
categories = ["wasm", "markdown", "example", "ianaio"]
publish = true
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.9.1", default-features = false }
ianaio = { path = "../..", features = ["futures"] }

console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4" }
js-sys = "0.3"
wasm-bindgen-test = "0.3.4"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

